* New unit tests. cc: 36%
* Had to add "-XX:MaxPermSize=256m" to the unit-tests JVM, in order to avoid OutOfMemoryError... Try to find out why using H2 in-memory databases cause this error (whereas DbManager.close() is always called).